# llm-learning

./: .gitignore  README.md  pyproject.toml
hnsw/: 01-benchmark-hnsw-vs-knn.ipynb  hnsw_models.py
llm/gpt-from-scratch/: 01-bigram.py  02-bigram-single-head.py  03-bigram-multi-head.py  04-bigram-multi-head-feedforward.py  05-bigram-block-attentions.py  06-bigram-block-attention-batchnorm.py  README.md  requirements.txt
llm/gpt-from-scratch/notebooks/: 01-debug-bigram.ipynb
notebooks/debug/: 00-debug-read-pdf.ipynb  01-debug-embeddings-create.ipynb  03-llama-index.ipynb
rag/01-pdf-search-llm-rag/: README.md  pyproject.toml
rag/01-pdf-search-llm-rag/data/: debug_embeddings_create.parquet  debug_read_pdf.parquet
rag/01-pdf-search-llm-rag/hnsw/: 00-debug-hnsw.ipynb  01-benchmark-hnsw-vs-knn.ipynb
rag/01-pdf-search-llm-rag/notebooks/debug/: 00-debug-read-pdf.ipynb  01-debug-embeddings-create.ipynb  02-debug-dataset-generation.ipynb
utils/: processing_pdf.py
