[tool.poetry]
name = "pdf-search-llm-rag"
version = "0.1.0"
description = ""
authors = ["DavidAmat"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.19,<3.13"
PyPDF2 = "^3.0.1"
pandas = "^2.2.0"
pyarrow = "^17.0.0"
sentence-transformers = "^3.0.1"
python-dotenv = "^1.0.1"
openai = "^1.40.6"
json-repair = "^0.27.2"
pymupdf = "^1.24.9"
psycopg2-binary = "^2.9.9"
pgvector = "^0.3.2"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.32" }
llama-index-legacy = "^0.9.48"
llama-index-llms-openai = "^0.1.27"
llama-index-embeddings-openai = "^0.1.5"
llama-index-program-openai = "^0.1.3"
llama-index-question-gen-openai = "^0.1.2"
llama-index-agent-openai = ">=0.1.4,<0.3.0"
llama-index-readers-file = "^0.1.4"
llama-index-readers-llama-parse = ">=0.1.2"
llama-index-indices-managed-llama-cloud = ">=0.2.0"
llama-index-core = "^0.10.67"
llama-index-multi-modal-llms-openai = "^0.1.3"
llama-index-cli = "^0.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
